[gd_scene load_steps=12 format=2]

[ext_resource path="res://sprites/1.png" type="Texture" id=1]
[ext_resource path="res://sprites/0.png" type="Texture" id=2]
[ext_resource path="res://scripts/sprites/Player.gd" type="Script" id=3]
[ext_resource path="res://audio/uuh.ogg" type="AudioStream" id=4]
[ext_resource path="res://audio/ahuah.ogg" type="AudioStream" id=5]
[ext_resource path="res://audio/huah.ogg" type="AudioStream" id=6]
[ext_resource path="res://audio/mouthsounds.ogg" type="AudioStream" id=7]
[ext_resource path="res://audio/unf.ogg" type="AudioStream" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 26.6054

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 32.4149

[node name="Player" type="KinematicBody2D"]
collision_layer = 2147483649
collision_mask = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -1 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
playing = true

[node name="Detect" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect"]
position = Vector2( -1, -2 )
shape = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." groups=[
"Persist",
]]

[node name="Flap1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
attenuation = 3.86374
bus = "Player"

[node name="Flap2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
attenuation = 3.36359
bus = "Player"

[node name="Flap3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
attenuation = 3.4822
bus = "Player"

[node name="Flap4" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
attenuation = 5.46415
bus = "Player"

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
attenuation = 5.37187e-08
bus = "Player"
[connection signal="area_entered" from="Detect" to="." method="_on_Detect_area_entered"]
[connection signal="body_entered" from="Detect" to="." method="_on_Detect_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="death"]
[connection signal="finished" from="DeathSound" to="." method="_on_DeathSound_finished"]
